# Fuel_Faucet

./: .env.example  .gitignore  Cargo.toml  vercel.json
src/: main.rs
